deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assignment-04
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: assignment-04
  template:
    metadata:
      labels:
        app: assignment-04
    spec:
      containers:
      - name: assignment-04
        image: moisesac/assignment-04:latest
        ports:
        - containerPort: 80
        imagePullPolicy: Always
